--- a/src/GameEditor/GameCore/GameCore.csproj
+++ b/src/GameEditor/GameCore/GameCore.csproj
@@ -39,11 +39,14 @@
   <ItemGroup>
     <Compile Include="Game.cs" />
     <Compile Include="Goods.cs" />
+    <Compile Include="IBuilding.cs" />
     <Compile Include="IGame.cs" />
     <Compile Include="IGoods.cs" />
+    <Compile Include="IMaintenance.cs" />
     <Compile Include="INamedItem.cs" />
     <Compile Include="IPrimaryProducer.cs" />
     <Compile Include="ISecondaryProducer.cs" />
+    <Compile Include="Maintenance.cs" />
     <Compile Include="PrimaryProducer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SecondaryProducer.cs" />
