--- a/src/GameEditor/GameCore/GameCore.csproj
+++ b/src/GameEditor/GameCore/GameCore.csproj
@@ -37,6 +37,7 @@
     <!-- A reference to the entire .NET Framework is automatically included -->
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DebellisMultitudinis\IConstructableUnit.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="Goods.cs" />
     <Compile Include="IBuilding.cs" />
@@ -51,6 +52,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SecondaryProducer.cs" />
     <Compile Include="Serialization\SerializerBase.cs" />
+    <Compile Include="DebellisMultitudinis\IConstructable.cs" />
+    <Compile Include="DebellisMultitudinis\IUnit.cs" />
+    <Compile Include="DebellisMultitudinis\Unit.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
