--- a/src/GameEditor/GameCore.UnitTest/GameCore.UnitTest.csproj
+++ b/src/GameEditor/GameCore.UnitTest/GameCore.UnitTest.csproj
@@ -61,6 +61,7 @@
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SerializerTest.cs" />
+    <Compile Include="DbmUnitTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\GameCore\GameCore.csproj">
