- Added the missing database table references for ArmyListDefinition and ArmyUnitDefinition

--- a/src/GameEditor/GameCore.WcfService/GameCore.WcfService.csproj
+++ b/src/GameEditor/GameCore.WcfService/GameCore.WcfService.csproj
@@ -110,6 +110,10 @@
     <Compile Include="Migrations\201606070335187_DBM_ArmyLists.Designer.cs">
       <DependentUpon>201606070335187_DBM_ArmyLists.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201606070339099_DBM_ArmyLists_1.cs" />
+    <Compile Include="Migrations\201606070339099_DBM_ArmyLists_1.Designer.cs">
+      <DependentUpon>201606070339099_DBM_ArmyLists_1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Service1.svc.cs">
       <DependentUpon>Service1.svc</DependentUpon>
@@ -145,6 +149,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201606070335187_DBM_ArmyLists.resx">
       <DependentUpon>201606070335187_DBM_ArmyLists.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201606070339099_DBM_ArmyLists_1.resx">
+      <DependentUpon>201606070339099_DBM_ArmyLists_1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
