--- a/src/GameEditor/GameEditor.Wcf.Harness/App.config
+++ b/src/GameEditor/GameEditor.Wcf.Harness/App.config
@@ -4,19 +4,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
     <system.serviceModel>
-        <bindings>
-            <basicHttpBinding>
-                <binding name="BasicHttpBinding_IBookmarkService" />
-                <binding name="BasicHttpBinding_IService1" />
-            </basicHttpBinding>
-        </bindings>
-        <client>
-            <endpoint address="http://localhost:8733/Design_Time_Addresses/GameCore.Wcf/BookmarkService/"
-                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IBookmarkService"
-                contract="BookmarkServiceReference.IBookmarkService" name="BasicHttpBinding_IBookmarkService" />
-            <endpoint address="http://localhost:52965/Service1.svc" binding="basicHttpBinding"
-                bindingConfiguration="BasicHttpBinding_IService1" contract="ServiceReference1.IService1"
-                name="BasicHttpBinding_IService1" />
-        </client>
+        <bindings />
+        <client />
     </system.serviceModel>
 </configuration>
