--- a/src/GameEditor/GameCore.WcfService/GameCore.WcfService.csproj
+++ b/src/GameEditor/GameCore.WcfService/GameCore.WcfService.csproj
@@ -74,6 +74,11 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DebellisMultitudinis\IDbmModel.cs" />
+    <Compile Include="Exceptions\PrimaryKeyViolationException.cs" />
+    <Compile Include="Exceptions\RecordNotFoundException.cs" />
+    <Compile Include="Helpers\ArmyDefinitionExtension.cs" />
+    <Compile Include="Helpers\ArmyUnitDefinitionExtension.cs" />
     <Compile Include="WarGameService.svc.cs">
       <DependentUpon>WarGameService.svc</DependentUpon>
     </Compile>
