--- a/src/GameEditor/GameEditor.Wcf.Harness/App.config
+++ b/src/GameEditor/GameEditor.Wcf.Harness/App.config
@@ -4,7 +4,15 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
     <system.serviceModel>
-        <bindings />
-        <client />
+        <bindings>
+            <basicHttpBinding>
+                <binding name="BasicHttpBinding_IWarGameService" />
+            </basicHttpBinding>
+        </bindings>
+        <client>
+            <endpoint address="http://localhost:52965/WarGameService.svc"
+                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IWarGameService"
+                contract="WarGameServiceReference.IWarGameService" name="BasicHttpBinding_IWarGameService" />
+        </client>
     </system.serviceModel>
 </configuration>
