- Refactored Controllers to use base controller which handles the setting of the view

--- a/src/GameEditor/GameEditor.Wcf.Harness/GameEditor.Wcf.Harness.csproj
+++ b/src/GameEditor/GameEditor.Wcf.Harness/GameEditor.Wcf.Harness.csproj
@@ -99,6 +99,14 @@
     <Compile Include="IoC\StaticBindings.cs" />
     <Compile Include="Models\GameModel.cs" />
     <Compile Include="Models\IGameModel.cs" />
+    <Compile Include="Mvc\BaseControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Mvc\BaseControl.Designer.cs">
+      <DependentUpon>BaseControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Mvc\Controller.cs" />
+    <Compile Include="Mvc\IController.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service References\WarGameServiceReference\Reference.cs">
