- Got the ArmyUnitDefinitions to all work

--- a/src/GameEditor/GameEditor.Wcf.Harness/GameEditor.Wcf.Harness.csproj
+++ b/src/GameEditor/GameEditor.Wcf.Harness/GameEditor.Wcf.Harness.csproj
@@ -19,7 +19,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;DESIGNMODE</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;DESIGNMODEX</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
@@ -52,11 +52,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ArmyUnitDetailControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ArmyUnitDetailControl.Designer.cs">
+      <DependentUpon>ArmyUnitDetailControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="ArmyDetailControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="ArmyDetailControl.Designer.cs">
       <DependentUpon>ArmyDetailControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ArmyUnitListControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ArmyUnitListControl.Designer.cs">
+      <DependentUpon>ArmyUnitListControl.cs</DependentUpon>
     </Compile>
     <Compile Include="ArmyListControl.cs">
       <SubType>UserControl</SubType>
@@ -119,8 +131,14 @@
     <Compile Include="Views\IArmyUnitListView.cs" />
     <Compile Include="Views\IArmyListView.cs" />
     <Compile Include="Views\IMainPageView.cs" />
+    <EmbeddedResource Include="ArmyUnitDetailControl.resx">
+      <DependentUpon>ArmyUnitDetailControl.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ArmyDetailControl.resx">
       <DependentUpon>ArmyDetailControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ArmyUnitListControl.resx">
+      <DependentUpon>ArmyUnitListControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ArmyListControl.resx">
       <DependentUpon>ArmyListControl.cs</DependentUpon>
